--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
     //-------------------------------------------------------------------------
     // base helper methods
+    //hello
     //-------------------------------------------------------------------------
 
     function get(id)        { return document.getElementById(id);  }
